# Conversor-PDF-to-MD

./: README.md  app.py  config.env.example  converter.py  packages.txt  pyproject.toml  requirements.txt  validator.py
