[project]
name = "codigo"
version = "0.1.0"
description = ""
authors = [
    {name = "claudio.carvalho",email = "claudio.carvalhogt@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.57.0,<2.0.0)",
    "pyspellchecker (>=0.9.0,<0.10.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.27.3,<0.28.0)",
    "language-tool-python (>=3.3.0,<4.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "codigo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
